fix invisible menu

--- a/assets/css/sass/screen.sass
+++ b/assets/css/sass/screen.sass
@@ -432,7 +432,7 @@ header
 					top: 0
 					left : 133px
 					width : 200px
-					height : 400px
+					// height : 400px
 					> li > ul
 						//third level
 						display : none
@@ -440,7 +440,7 @@ header
 						top: 0
 						left : 190px
 						width : 250px
-						height : 400px
+						// height : 400px
 						li
 							+border-radius(0px)
 
